--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ workflows:
   main:
     jobs:
       - moul/golang-build:
-          gopkg: moul.io/golang-repo-template
+          gopkg: moul.io/music-paint
       - moul/golang-build:
-          gopkg: moul.io/golang-repo-template
+          gopkg: moul.io/music-paint
           tag: '1.12'
       - moul/golang-build:
-          gopkg: moul.io/golang-repo-template
+          gopkg: moul.io/music-paint
           tag: '1.11'
       - moul/docker-build
